# tauri-dotnet-example

./: README.md  package.json  pnpm-lock.yaml
src/: index.html
src-dotnet/: FFI.cs  Program.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
