[package]
name = "tauri-dotnet"
version = "0.0.0"
description = ""
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
